--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,11 @@
+header:before {
+  display: inline-block;
+  content: '';
+  width: 110px;
+  height: 110px;
+  background: url("/images/jscausecat.svg") no-repeat;
+  background-color: white; }
+
 body {
   font-family: verdana, arial, sans-serif; }
 
@@ -6,14 +14,15 @@ body {
   width: 80%;
   min-width: 300px; }
 
-.sidemenu {
-  float: left; }
-  .sidemenu li {
-    background: red; }
-
-footer {
-  clear: both; }
-
-@media (max-width: 320px) {
-  .sidemenu {
-    float: none; } }
+.topmenu ul {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  list-style-type: none; }
+  .topmenu ul li {
+    margin: 0.25em;
+    white-space: nowrap;
+    font-weight: bold; }
+    .topmenu ul li a {
+      font-weight: normal; }
