--- a/css/site.css
+++ b/css/site.css
@@ -1,28 +1,78 @@
-header:before {
-  display: inline-block;
-  content: '';
-  width: 110px;
-  height: 110px;
-  background: url("../images/jscausecat.svg") no-repeat;
-  background-color: white; }
-
 body {
-  font-family: verdana, arial, sans-serif; }
+  font-family: verdana, arial, sans-serif;
+  background-color: #a5a5a5;
+  margin: 0;
+  font-size: 0.85em;
+  line-height: 1.5em; }
+
+a, a:visited {
+  color: #44a;
+  text-decoration: none; }
+
+a:hover {
+  text-decoration: underline;
+  color: #f00a40; }
 
 .maincontainer {
-  margin: auto;
+  margin: 0 auto;
   width: 80%;
-  min-width: 300px; }
+  min-width: 300px;
+  background: #d5d5d5; }
 
-.topmenu ul {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
-  list-style-type: none; }
-  .topmenu ul li {
-    margin: 0.25em;
-    white-space: nowrap;
-    font-weight: bold; }
-    .topmenu ul li a {
-      font-weight: normal; }
+h1 {
+  background-color: #f5f5f5;
+  border: 1px solid #aaa;
+  margin: 0.25em auto;
+  padding: 1em 0 1em 1em;
+  border-radius: 5px;
+  color: #050; }
+
+pre, code {
+  background: #eaeaea;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 0.15em; }
+
+pre {
+  border: 1px solid #aaa;
+  padding: 0.5em;
+  font-size: 1.1em; }
+  pre code {
+    font-size: 1.25em;
+    border: none; }
+
+header {
+  background-color: #f5f5f5;
+  padding: 1em;
+  margin: 0; }
+  header:before {
+    display: inline-block;
+    content: '';
+    width: 110px;
+    height: 110px;
+    background: url("/images/jscausecat.svg") no-repeat; }
+
+.topmenu {
+  margin: 1em; }
+  .topmenu ul {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    list-style-type: none; }
+    .topmenu ul li {
+      margin: 0.25em;
+      white-space: nowrap;
+      font-weight: bold; }
+      .topmenu ul li a {
+        font-weight: normal; }
+
+.title {
+  margin: 0 1em; }
+
+.content {
+  background: #f5f5f5;
+  margin: 0.25em 1em;
+  padding: 2em;
+  border: 1px solid #aaa;
+  border-radius: 5px; }
