--- a/css/site.css
+++ b/css/site.css
@@ -22,13 +22,18 @@ li {
   min-width: 300px;
   background: #d5d5d5; }
 
+h1, h2, h3 {
+  color: #050; }
+
 h1 {
   background-color: #f5f5f5;
   border: 1px solid #aaa;
   margin: 0.25em auto;
   padding: 1em 0 1em 1em;
-  border-radius: 5px;
-  color: #050; }
+  border-radius: 5px; }
+
+code {
+  font-size: 1.15em; }
 
 pre, code {
   background: #eaeaea;
@@ -40,7 +45,7 @@ pre {
   border: 1px solid #aaa;
   padding: 0.5em;
   font-size: 1.1em;
-  overflow: scroll; }
+  overflow: auto; }
   pre code {
     font-size: 1.25em;
     border: none; }
@@ -48,7 +53,8 @@ pre {
 header {
   background-color: #f5f5f5;
   padding: 1em;
-  margin: 0; }
+  margin: 0;
+  border-bottom: 1px solid #aaa; }
   header:before {
     display: inline-block;
     content: '';
@@ -56,19 +62,22 @@ header {
     height: 110px;
     background: url("/images/jscausecat.svg") no-repeat; }
 
-.topmenu {
-  margin: 1em; }
-  .topmenu ul {
+.sitemenu {
+  background-color: white;
+  margin: 0; }
+  .sitemenu ul {
+    padding: 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     list-style-type: none; }
-    .topmenu ul li {
-      margin: 0.25em;
+    .sitemenu ul li {
+      padding: 0 0.75em;
+      margin: 0.25em 0;
       white-space: nowrap;
       font-weight: bold; }
-      .topmenu ul li a {
+      .sitemenu ul li a {
         font-weight: normal; }
 
 .title {
@@ -81,6 +90,31 @@ header {
   border: 1px solid #aaa;
   border-radius: 5px; }
 
+footer {
+  font-size: 85%;
+  color: #444;
+  padding: 1em; }
+
+p img {
+  display: block;
+  width: 100%;
+  max-width: 640px;
+  margin: auto; }
+  p img + span {
+    display: block;
+    text-align: center;
+    color: #555; }
+
 @media screen and (max-width: 360px) {
+  .title {
+    margin: 0 0.25em; }
+
+  .maincontainer {
+    width: 100%; }
+
+  .content {
+    margin: 0.25em;
+    padding: 0.5em; }
+
   ul {
     padding: 1em; } }
