--- a/css/site.css
+++ b/css/site.css
@@ -106,6 +106,16 @@ p img {
     color: #555; }
 
 @media screen and (max-width: 400px) {
+  body {
+    font-size: 1em;
+    line-height: 1.25em; }
+
+  h1 {
+    padding: 0.5em 0 0.5em 0.5em; }
+
+  code {
+    font-size: 1em; }
+
   .title {
     margin: 0 0.25em; }
 
